# c-toxcore

./: CMakeLists.txt  INSTALL.md  NOTES.minpgc.md  NOTES.pgc  circle.yml  conference-stress-test
auto_tests/: BUILD.bazel  Makefile.inc  announce_client_test.c  announce_lookups_test.c  announce_test.c  auto_test_support.c  auto_test_support.h  conference_av_test.c  conference_double_invite_test.c  conference_invite_merge_test.c  conference_peer_nick_test.c  conference_simple_test.c  conference_test.c  dht_test.c  forwarding_test.c  friend_connection_test.c  lossless_packet_test.c  lossy_packet_test.c  overflow_recvq_test.c  overflow_sendq_test.c  reconnect_test.c  run_auto_test.c  run_auto_test.h  send_message_test.c  tcp_backup_test.c  tcp_gossip_test.c  tox_many_tcp_test.c  typing_test.c
docs/: minpgc.md
testing/: DHT_test.c
toxav/: bwcontroller.c  groupav.c  ring_buffer.c  rtp.c  rtp.h  toxav.api.h  toxav.c  toxav.h  toxav_old.c  video.c
toxcore/: BUILD.bazel  DHT.c  DHT.h  LAN_discovery.c  Makefile.inc  Messenger.c  Messenger.h  TCP_client.c  TCP_client.h  TCP_connection.c  TCP_connection.h  TCP_server.c  TCP_server.h  announce.c  announce.h  announce_client.c  announce_client.h  announce_common.c  announce_common.h  announce_lookups.c  announce_lookups.h  crypto_core.api.h  crypto_core.c  crypto_core.h  forwarding.c  forwarding.h  friend_connection.c  group.c  group.h  logger.h  mono_time.c  mono_time.h  net_crypto.c  net_crypto.h  network.c  network.h  onion.c  onion.h  onion_announce.c  onion_announce.h  (+8 more)
